Escrita da seção 'About'.

--- a/index.html
+++ b/index.html
@@ -86,7 +86,11 @@
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>About</h2>
-            <p>TODO</p>
+            <p>He is currently Tech Lead at DIO, where he is responsible for orchestrating the plataform's educational content.
+              In addition, he is a doctoral student at the University of São Paulo (USP), whose project aims to contribute to the acessibility of video classes.
+              Venilton has solid experience in software development, with an emphasis on the architecture ans construction of Android Apps.
+              To conclude, he is certified on Java (Oracle) and Android (Google).
+            </p>
           </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
