Preenchimento da seção 'Work Experience'.

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>About</h2>
             <p>He is currently Tech Lead at DIO, where he is responsible for orchestrating the plataform's educational content.
               In addition, he is a doctoral student at the University of São Paulo (USP), whose project aims to contribute to the acessibility of video classes.
-              Venilton has solid experience in software development, with an emphasis on the architecture ans construction of Android Apps.
+              Venilton has solid experience in software development, with an emphasis on the architecture and construction of Android Apps.
               To conclude, he is certified on Java (Oracle) and Android (Google).
             </p>
           </div>
@@ -96,21 +96,25 @@
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>TODO - <span class="w3-tag w3-teal w3-round">Current</span></h6>
-              <p>TODO</p>
+              <h5 class="w3-opacity"><b>Tech Lead at DIO</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Mar 2021 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
+              <p>Define and execute the educational content roadmap considering market trends and partner demands (hiring).
+                In this context, ensuring the continuous evolution of our educational methodology is also a key responsability.
+              </p>
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>TODO - TODO</h6>
-              <p>TODO</p>
+              <h5 class="w3-opacity"><b>Software Architect and Co-founder at Brain Machine</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Feb 2016 - Mar 2021</h6>
+              <p>IT consulting startup focused on architectural improvements of Web and Mobile solutions.
+                Through it I expanded my networking and learned a lot about entrepreneurship.
+              </p>
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>TODO - TODO</h6>
-              <p>TODO</p><br>
+              <h5 class="w3-opacity"><b>Technology Specialist at Cast Group</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Oct 2008 - Feb 2018</h6>
+              <p>Provides architectural decisions on Android, Java and .NET plataforms, adapting them to each client's domain.</p><br>
             </div>
           </div>
   
