Preenchimento da seção 'Education'.

--- a/index.html
+++ b/index.html
@@ -122,21 +122,27 @@
             <h2 class="w3-text-grey w3-padding-16"><i
                 class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
+              <h5 class="w3-opacity"><b>DIO</b></h5>
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i><span class="w3-tag w3-teal w3-round">Forever</span></h6>
-              <p>TODO</p>
+              <p>One of the largest IT open education plataforms in Lation America, with almost 1 million users.
+                DIO has partnerships with some of the most innovative companies in the world, enabling global notworking. 
+                In this context, I completed the following DIO educational experiences:
+                <ul>
+                  <li><a href="TODO_LINK_CERTIFICADO" target="_blank">Santander Bootcamp Mobile Developer</a></li>
+                </ul>
+              </p>
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>TODO - <span class="w3-tag w3-teal w3-round">Current</span></h6>
-              <p>TODO</p>
+              <h5 class="w3-opacity"><b>University of São Paulo (USP)</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2018 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
+              <p>Doctoral Degree.</p>
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>TODO - TODO</h6>
-              <p>TODO</p><br>
+              <h5 class="w3-opacity"><b>University of São Paulo (USP)</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2012 - 2015</h6>
+              <p>Master Degree.</p><br>
             </div>
           </div>
   
